--- a/pom.xml
+++ b/pom.xml
@@ -23,14 +23,22 @@
         <surfire.version>3.0.0-M4</surfire.version>
         <aspectj.version>1.9.5</aspectj.version>
 
+        <allure-testng.version>2.13.2</allure-testng.version>
+        <allure-maven.version>2.10.0</allure-maven.version>
     </properties>
 
     <dependencies>
-        <!-- Fluent assertions library -->
+        <!-- A -->
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assertj.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>${allure-testng.version}</version>
         </dependency>
         <!--S-->
         <dependency>
@@ -90,6 +98,16 @@
                 <configuration>
                     <source>${compile.source.version}</source>
                     <target>${compile.target.version}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>${allure-maven.version}</version>
+                <configuration>
+                    <properties>
+                        <reportDirectory>${project.build.directory}/allure-report</reportDirectory>
+                    </properties>
                 </configuration>
             </plugin>
         </plugins>
