--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
                 <configuration>
                     <source>${compile.source.version}</source>
                     <target>${compile.target.version}</target>
+                        <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
             <plugin>
